avienc: Disallow the first frame to be skiped

Fixes Ticket2386

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit cc0db8cf3042186d8355dcf10be67071cfbbcc5d)

Conflicts:
	libavformat/avienc.c